syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.maurycy.framework.mba.generated";
option java_outer_classname = "DataProto";

package data;

// The greeting service definition.
service DataService {
  // Add Data to db
  rpc AddData (AddDataRequest) returns (AddDataReply) {}
  // Get Data from db
  rpc GetDataById (GetDataRequest) returns (GetDataReply) {}

  // Get Data from db
  rpc GetAllData (GetAllDataRequest) returns (stream GetDataReply) {}
}


message AddDataRequest {
  string id = 1;
  map<string, string> data = 2;
}

message AddDataReply {
  string id = 1;
}

message GetDataRequest {
  string id = 1;
}

message GetDataReply {
  string id = 1;
  map<string, string> data = 2;
}
message GetAllDataRequest {
}